--- a/Code/ElevatorProject/Debug/makefile
+++ b/Code/ElevatorProject/Debug/makefile
@@ -60,8 +60,8 @@ all: main-build
 main-build: ElevatorProject.elf secondary-outputs
 
 # Tool invocations
-ElevatorProject.elf ElevatorProject.map: $(OBJS) $(USER_OBJS) C:\Users\Wouter\STM32CubeIDE\workspace_1.13.1\ElevatorProject\STM32F303RETX_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
-	arm-none-eabi-gcc -o "ElevatorProject.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m4 -T"C:\Users\Wouter\STM32CubeIDE\workspace_1.13.1\ElevatorProject\STM32F303RETX_FLASH.ld" --specs=nosys.specs -Wl,-Map="ElevatorProject.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
+ElevatorProject.elf ElevatorProject.map: $(OBJS) $(USER_OBJS) C:\Repositories\elevator-project\Code\ElevatorProject\STM32F303RETX_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
+	arm-none-eabi-gcc -o "ElevatorProject.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m4 -T"C:\Repositories\elevator-project\Code\ElevatorProject\STM32F303RETX_FLASH.ld" --specs=nosys.specs -Wl,-Map="ElevatorProject.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
 	@echo 'Finished building target: $@'
 	@echo ' '
 
